--- a/style.css
+++ b/style.css
@@ -1,280 +1,237 @@
 @font-face {
-    font-family: 'Roboto-Black';
+    font-family: 'RobotoBlack',sans-serif;
     src: url(./fonts/Roboto-Black.ttf) ;
 }
 @font-face {
-    font-family: 'Roboto-Light';
-    src: url(./fonts/Roboto-Light.ttf) ;
+    font-family: 'RobotoBlackItalic' , sans-serif;
+    src: url(./fonts/Roboto-BlackItalic.ttf) ;
 }
 @font-face {
-    font-family: "Roboto-LightItalic" , sans-serif;
-    src: url(./fonts/Roboto-LightItalic.ttf);
+    font-family: 'RobotoBold' , sans-serif;
+    src: url(./fonts/Roboto-Bold.ttf);
 }
-body{
-    margin: 0;
-    padding:0;  
+@font-face {
+    font-family: 'RobotoBoldItalic' , sans-serif;
+    src: url(./fonts/Roboto-BoldItalic.ttf);
 }
-.container{
-    margin: 200px;
+@font-face {
+    font-family: 'RobotoItalic' , sans-serif;
+    src: url(./fonts/Roboto-Italic.ttf);
 }
-.box{
-    width:100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap; 
-}
-
-.header{
-    background: #1f2937;
-    position:relative;
-    flex:1;
-    max-width: 1000px;
-    height:500px;
-    margin: 0;
-    border-radius: 5px;
-    box-shadow:0 0 5px rgba(0,0,0,0.2);
-    flex-direction: row; 
-}
-
-.logo img{
-    height: 25px;
-    width: 50px;
-}
-.nav{
-    height: 50px;
-}
-.nav ul{
-    flex-wrap: wrap;
-    border: 1px solid black;
-    list-style:none;
-    margin:0;
-    padding: 0;
-    display:flex;
- }
-
- a{
-    
-    font-weight: 100;
-    letter-spacing: 2px;
-    text-decoration: none;
-    display: inline-block;
-    padding: 5px 5px;
-    text-align: center;
-    width:100%;
-    transition: all 0.5s;
-    color: #e5e7eb;
- }
- .nav .logo{
-    color: #f9faf8;
-    font-size: 24px;
- }
- .nav .link a{
-    font-size: 18px;
- }
-.nav li{
-    flex:2;
-}
-.nav .logo{
-    flex-grow: 8;
-}
-.nav .link a{
-    flex-grow:1;
-}
- 
- .m{
-    display:flex;
- }
- .m .content{
-    flex:1;
- }
- .content h1{
-   color: #f9faf8;
-   font-size: 48px;
-   font-weight: bolder;
- }
- .content h4{
-    color: #e5e7eb;
-    font-size: 18px;
- }
- .content .button{
-    color: #f9faf8;
-    background-color: #3882f6;
- }
-
-.image img{
-    flex:2;
-    width: 500px;
-    height: 220px;
- }
-
-
-.main{
-    align-items:center;
-    position:relative;
-    flex-direction:row;
-    max-width: 1000px;
-    height:250px;
-    margin: 0;
-    border-radius: 5px;
-    box-shadow:0 0 5px rgba(0,0,0,0.2);
-    text-align: center;
-    flex:1;
-}
-
-.main .figure{
-    display: inline;
-    height: 70px;
-    width:100px;
-    flex:4;
-    flex-direction: row;
-}
-
-
-
-.m{
-    align-items: center; 
-}
-.figure img{
-    height: 100px;
-    width: 100px;
-    border: 2px solid #3882f6;
-    border-width: 3px;
-    flex-direction: row;
-}
-.figure .figurecap{
-    align-items: center;
-}
-.figure1{
-    order:1;
-}
-.figure2{
-    order:2;
-}
-.figure3{
-    order:3;
-}
-.figure4{
-    order:4;
-}
-.figurecap{
-    align-items: center;
-}
-
-.main p{
-    font-size: 36px;
-    color: #1f2937;
-    font-weight: bolder;
-}
-
-.section1{
-    font-size: 36px;
-    color: #1f2937;
+@font-face {
+    font-family: 'RobotoLight', sans-serif;
+    src: url(./fonts/Roboto-Light.ttf);
     font-weight: lighter;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    align-content: center;
 }
-.section1{
-    background-color: #e5e7eb;
-    position:relative;
-    flex:1;
-    max-width: 1000px;
-    height:250px;
-    margin: 0;
-    border-radius: 5px;
-    box-shadow:0 0 5px rgba(0,0,0,0.2);
+@font-face {
+    font-family: 'RobotoLightItalic' , sans-serif;
+    src: url(./fonts/Roboto-LightItalic.ttf);
+    font-weight:lighter;
 }
-.section2{
-    display: flex;
-    flex:2;
-    position:relative;
-    max-width: 1000px;
-    height:250px;
-    margin: 0;
-    border-radius: 5px;
-    box-shadow:0 0 5px rgba(0,0,0,0.2);
-    background-color: #3882f6;
-    align-items: center;
+@font-face {
+    font-family: 'RobotoThin' , sans-serif;
+    src: url(./fonts/Roboto-Thin.ttf);
 }
-.button{  
-    background-color: #3882f6;
-    border:1px #f9faf8;
-    order:2;
- }
-
-.info2{
-   font-size: 18px;
-   color: #e5e7eb;
-   font-weight: lighter;
-   order:2;
-    
- }
-.info1{
-    font-size: 24px;
-    color: #f9faf8;
-    font-weight: bolder;
-
-    order:1;
-     
-  }
-  .info{
-    display:flex;
-    flex:2;
-    order:1;
-  }
-
-.footer{
-    background: #1f2937;
-    position:relative;
-    flex:1;
-    max-width: 1000px;
-    height:250px;
-    margin: 0;
-    border-radius: 5px;
-    box-shadow:0 0 5px rgba(0,0,0,0.2);
-    align-items: center;   
+@font-face {
+    font-family: 'RobotoItalic' , sans-serif;
+    src: url(./fonts/Roboto-ThinItalic.ttf);
 }
-.box5{
-    display:flex;
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    flex-flow: wrap;
 }
-.section2{
-    flex-direction: row;
-    flex:1;
+header{
+    background-color: #1f2937;
 }
-.info{
-    display: block;
-    flex:2;
-    order:1;
-    text-align: center;
+header section img{
+    width: 250px;
+    height: 300px; 
 }
-.section2 .button{
-    flex:1;
-    order:2;
-    display:block;
-    width: 20px;
-    height:20px;
-    align-items: center;
-    text-align: center;
-}
-
-.footer{
-    height: 100px;
-    align-items: center;
-}
-.footer p {
-    color: #e5e7eb;
+header nav li a{
+    color:#f9faf8;
+    font-family: 'Roboto',sans-serif;
     font-size: 18px;
-    text-align: center;
-  
+    font-weight: lighter;
 }
-.box6{
-    justify-items: center;
+header section h1{
+    color:#f9faf8;
+    font-size: 48px;
+    font-family: 'Roboto',sans-serif;
+    font-weight: bolder;
+}
+header section h2{
+    font-size: 18px;
+    color:#e5e7eb;
+    font-family: 'Roboto',sans-serif; 
+   font-weight: lighter;
+}
+nav{
+    padding-left: 9.3%;
+    padding-right: 6.3%;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
+header .logo{
+    font-size: 24px;
+    color:#f9faf8;
+    font-family: 'Roboto',sans-serif;
+    font-weight: bold;
+ }
+nav ul li {
+ list-style-type: none;
+ display: inline-block;
+ margin:25px;
+}
+button{
+    background-color: #3882f6;
+    padding: 10px;
+    font-family: 'Roboto',sans-serif;
+    font-weight: bold;
+    color: #f9faf8;
+    box-shadow: #3882f6;
+    border-radius: 10px;
+    padding-right: 30px;
+    padding-left: 30px;
+}
+header section{
+    display:flex;
+    padding-left:120px;
+    padding-right:120px;
+    padding-bottom:120px;
+    padding-top:90px;
     align-items: center;
     justify-content: center;
-    align-content: center;
-    align-self: center;
 }
+header section .content {
+   flex:1;
+   margin-right: 40px;
+}
+header section img{
+    flex:1;
+}
+header section div .contents{
+    margin:20px;
+}
+main .section1 h1{
+    font-size: 36px;
+    font-family:'Roboto',sans-serif;
+    font-weight:bolder;
+    color: #1f2937;
+}
+main .section1 figure img{
+    width:200px;
+    height:200px;
+
+}
+main .section1 figure figcaption{
+    font-family:'Roboto',sans-serif;
+    color: #e5e7eb;
+    font-weight: lighter;
+}
+main .section1{
+    margin: 80px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction: column;   
+}
+main .section1 .figures figure {
+   display: inline-block;
+   margin: 40px;
+   margin-top:80px;
+}
+main .section1 .figures figure img{
+    border: 5px solid #3882f6;
+    box-shadow: #3882f6;
+    border-radius: 10px;
+}
+main .section1 .figures figure figcaption{
+ text-align: center;
+ font-family: 'Roboto',sans-serif;
+ font-weight: lighter;
+  color: #1f2937;
+}
+main aside p{
+    font-size: 36px;
+    font-family: 'Roboto',sans-serif;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1f2937;
+    text-align: center;
+}
+main aside{
+    background-color: #e5e7eb;
+    padding: 200px;
+}
+main .section2{
+   background-color: #3882f6;
+   margin: 200px;
+   box-shadow: #3882f6;
+   border-radius: 10px; 
+    padding: 25px;
+}
+main .section2 .information .information1{
+    color:#f9faf8;
+    font-family: 'Roboto',sans-serif;
+    font-weight: bolder;
+}
+main .section2 .information .information2{
+    color:#e5e7eb;
+    font-family: 'Roboto',sans-serif; 
+   font-weight: lighter;
+}
+
+main .section2 .button2 {
+    border-color: #f9faf8;
+}
+main .section2{
+    display:flex;
+    align-items: center;
+    justify-content:space-evenly;
+}
+footer p{
+    color:#e5e7eb;
+    font-family: 'Roboto',sans-serif; 
+    font-weight: lighter;
+    text-align: center;
+}
+footer{
+  background-color: #1f2937;
+  padding:40px;
+}
+header nav .logo-content img{
+    width: 30px;
+    height:30px;
+}
+header nav .logo-content{
+    display:flex;
+    justify-content: space-around;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 
 
   
